fixed a styling bug where I was not explicity setting the pokedex list class to align to the left and it was taking margin values from the div global defaults.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -117,12 +117,16 @@ head {
 .pokedex-body, .full-page-grid {
   padding: 0;
   background-color: var(--background-color);
+
 }
 
 // set the minimum and maximum width so the layout doesn't look pants.
 .pokedex-body {
   min-width: 250px;
   max-width: 400px;
+  float: left;
+  width: 100%;
+  margin-left: 0;
 }
 
 h1 {
